# beanclerk

./: .pre-commit-config.yaml  Pipfile  README.md  build_venv  pyproject.toml
.github/workflows/: publishing.yml  tests.yml
beanclerk/: bean_helpers.py  clerk.py  cli.py  config.py
beanclerk/importers/: __init__.py  banka_creditas.py  fio_banka.py
tests/: beanclerk-config.yml  conftest.py  ledger.beancount  test_clerk.py  test_config.py
tests/importers/: test_banka_creditas.py  test_fio_banka.py
